# Kubrain

./: README.md  pyproject.toml
.github/workflows/: code-tests.yml  lint-code.yml
kubrain/: loggers.py  manager.py
kubrain/assets/schemas/: __init__.py  config.json  kubrain_config.py
kubrain/configure/: parser.py  validation.py
kubrain/types/: data.py  schema.py
kubrain/utils/: loggers.py  transpile.py
schemas/configs/: global.yaml  main.py
tests/: conftest.py  test_manager.py  test_parser.py
tests/assets/: test_config.yaml
tests/configure/: test_parser.py
tests/utils/: test_schema_transpilation.py  test_transpilation.py
